# LTM_task

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: example_session.json  habituation_session.json  wheel_habituation_session.json
docs/: deployment.md  hardware_bringup.md  start_configure_and_test.md  task_modularity.md  teensy_firmware.md  unity_integration.md  unity_sample_setup.md  wiring.md
generated_audio/: README_generated.txt  og_set_0001.csv  set_0001.csv
rpi5_controller/: __init__.py  main.py
rpi5_controller/core/: __init__.py  commands.py  config.py  encoder.py  enums.py  iti.py  packets.py  position.py  randomization.py  state_machine.py  task_flow.py
rpi5_controller/hardware/: audio.py  executor.py  gpio.py  lick.py  pulse.py  serial_uart.py  udp.py
rpi5_controller/logging/: __init__.py  log_entry.py  ring_buffer.py  trial_events.py  writer.py
rpi5_controller/runtime/: __init__.py  clock.py  session_runner.py
rpi5_controller/schemas/: session_config.schema.json
rpi5_controller/tests/: conftest.py  test_audio.py  test_config.py  test_encoder.py  test_generate_context_audio.py  test_gpio_backend.py  test_hardware_bringup_script.py  test_iti.py  test_packets.py  test_play_context_audio_script.py  test_position.py  test_pulse_scheduler.py  test_randomization.py  test_session_runner.py  (+2 more)
rpi5_vr_task.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
teensy_firmware/: teensy_encoder_streamer.ino
tools/: calibrate_wheel.py  configure_session.py  hardware_bringup_check.py  play_context_audio.py
unity_receiver/: README.md
(+6 files in other folders)
